--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "goit-react-hw-03-imagefinder",
+  "name": "goit-react-hw-04-imagefinder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://adrilix.github.io/goit-react-hw-03-image-finder/",
+  "homepage": "https://adrilix.github.io/goit-react-hw-04-image-finder/",
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.15.2",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "formik": "^2.4.2",
     "nanoid": "^4.0.2",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
